--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Page Title -->
   <title>Zelerium</title>
-  <link rel="icon" href="assets/img/loading.png" type="image/gif" sizes="16x16">
+  <link rel="icon" href="assets/img/zelerium.org.png" type="image/gif" sizes="16x16">
   <!-- Compressed Styles -->
   <link href="css/slides.min.css?41331" rel="stylesheet" type="text/css">
 
