--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 </head>
 
 <body class="slides chain simplifiedMobile animated">
-  <!-- Navigation -->
+  <!-- Navigation 
   <nav class="side pole">
     <div class="navigation">
       <ul></ul>
     </div>
-  </nav>
+  </nav>-->
 
   <!-- Panel Top #08 -->
   <nav class="panel top">
@@ -44,9 +44,8 @@
       <div class="left"><a href="#"></a></div>
       <div class="center">
         <ul class="menu uppercase">
-          <li><a href="#">Getting started</a></li>
-          <li><a href="#">Investors</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">Exchange</a></li>
+          <li><a href="about/index.html">Learn More</a></li>
         </ul>
       </div>
       <div class="right">
