--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="fix-3-12">
               <h1 class="wide ae-1 fromCenter">Zelerium</h1>
             </div>
-            <br>
             <p class="ae-2"><span class="opacity-8">Zelerium is an innovative payment network and a new kind of money.</span></p>
+            <div class="ae-2"><a href="#" class="opacity-8">Launching Soon™</a></div>
           </div>
         </div>
       </div>
@@ -77,13 +77,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Panel Bottom #15 -->
-  <nav class="panel bottom">
-    <div class="sections">
-      <div class="center"><a href="#" class="opacity-8">Launching Soon™</a></div>
-    </div>
-  </nav>
 </body>
 
 </html>
