--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="css/slides.min.css?41331" rel="stylesheet" type="text/css">
 
   <!-- Custom Styles -->
-  <!-- <link href="css/custom.css" rel="stylesheet" type="text/css"> -->
+  <link href="css/no-select.css" rel="stylesheet" type="text/css">
 
   <!-- jQuery 3.3.1 -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
