--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
       <div class="left"><a href="#"></a></div>
       <div class="center">
         <ul class="menu uppercase">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="../">Home</a></li>
         </ul>
       </div>
       <div class="right">
