--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="center">
         <ul class="menu uppercase">
           <li><a href="#">Exchange</a></li>
-          <li><a href="about/index.html">Learn More</a></li>
+          <li><a href="about/">Learn More</a></li>
         </ul>
       </div>
       <div class="right">
