--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@
                   the opportunity to mine
                   Zelerium.
                   Mining involves validating transactions, and in return, miners
-                  are rewarded with the transaction fees of a transactions they have validated and receive Zelerium
+                  are rewarded with Zelerium
                   coins.
                 </span></p>
             </div>
