--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <!-- Custom Styles -->
   <link href="css/no-select.css" rel="stylesheet" type="text/css">
+  <link href="css/custom.css" rel="stylesheet" type="text/css">
 
   <!-- jQuery 3.3.1 -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -70,11 +71,9 @@
           </div>
         </div>
       </div>
-      <div class="background">
-        <div id="particles-js"></div>
-        <script src="js/particles.min.js"></script>
-        <script src="js/app.js"></script>
-      </div>
+      <div id="particles-js"></div>
+      <script src="js/particles.min.js"></script>
+      <script src="js/app.js"></script>
     </div>
   </section>
 </body>
