--- a/about/index.html
+++ b/about/index.html
@@ -143,11 +143,15 @@
             <div class="fix-9-12 center">
               <h1 class="ae-1">Supporting</h1>
               <p class="ae-2"><span class="opacity-8">You can show your support for the Zelerium project by following us
-                  on GitHub
+                  on GitHub and Twitter
                 </span></p>
               <div class="fix-9-12">
                 <a href="https://github.com/Zelerium-org/" target="_blank" class="button hollow ae-5"><img
                     src="../assets/img/GitHub_Logo_White.png" height="63" /></a>
+                    <br>
+                    <br>
+                    <a href="https://twitter.com/ZeleriumOrg/" target="_blank" class="button hollow ae-5"><img
+                      src="../assets/img/twitter.png" height="63" /></a>
               </div>
             </div>
           </div>
